// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContactListItemMobile > should render 1`] = `
<DocumentFragment>
  <div
    class="css-fvpuky"
  >
    <div
      class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        <div
          class="flex w-0 flex-grow items-center justify-between space-x-3"
        >
          <span
            class="truncate text-lg font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
          >
            Brian
          </span>
          <div
            class="ml-5 flex items-center space-x-3"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="flex text-theme-primary-300 dark:text-theme-secondary-500"
                  type="button"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="ellipsis-vertical"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="16.994"
                          r="2.006"
                        />
                        <circle
                          cx="10"
                          cy="3"
                          r="2"
                        />
                        <circle
                          cx="10"
                          cy="10"
                          r="2"
                        />
                      </g>
                    </svg>
                  </div>
                </button>
              </span>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
              type="vertical"
            />
          </div>
        </div>
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100 css-qr226j-AccordionHeader"
      >
        <div
          class="css-1j7gziz"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContactListItemMobile > should render addresses 1`] = `
<DocumentFragment>
  <div
    class="css-fvpuky"
  >
    <div
      class="select-none cursor-pointer md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 md:border-b"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        <div
          class="flex w-0 flex-grow items-center justify-between space-x-3"
        >
          <span
            class="truncate text-lg font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
          >
            Brian
          </span>
          <div
            class="ml-5 flex items-center space-x-3"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="flex text-theme-primary-300 dark:text-theme-secondary-500"
                  type="button"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="ellipsis-vertical"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="16.994"
                          r="2.006"
                        />
                        <circle
                          cx="10"
                          cy="3"
                          r="2"
                        />
                        <circle
                          cx="10"
                          cy="10"
                          r="2"
                        />
                      </g>
                    </svg>
                  </div>
                </button>
              </span>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
              type="vertical"
            />
          </div>
        </div>
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch css-qr226j-AccordionHeader"
      >
        <div
          class="css-1j7gziz"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform rotate-180 css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      <div
        class="w-full space-y-3"
        data-testid="ContactListItemMobile__addresses"
      >
        <div
          class="flex h-20 items-center justify-between overflow-hidden"
        >
          <div
            class="flex h-full flex-1 flex-col justify-center overflow-hidden rounded-l-xl px-6 dark:border-2 dark:border-r-0 dark:border-theme-secondary-800 dark:bg-theme-secondary-900 bg-theme-secondary-100"
          >
            <div
              class="mb-2 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK Devnet
            </div>
            <div
              class="flex items-center space-x-3 overflow-hidden"
            >
              <div
                class="shrink-0 css-1i0wxh3"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                </span>
              </div>
              <button
                class="ring-focus relative focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="clipboard-icon__wrapper"
                type="button"
              >
                <div
                  class="text-theme-primary-300 dark:text-theme-secondary-700"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="copy"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="flex h-full"
          >
            <button
              class="flex h-full items-center justify-center rounded-r-xl px-3 bg-theme-secondary-200 text-theme-secondary-500 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              data-testid="ContactListItemMobileAddress__send-button"
              disabled=""
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="double-arrow-right"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M1 7.744h9.013V3.832c0-.4.2-.4.5-.2 2.103 1.504 7.31 5.014 8.111 5.616.501.3.501 1.103 0 1.504-.8.602-6.008 4.212-8.11 5.616-.401.2-.501.2-.501-.2v-3.71H1"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
